// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemPastLoans tests should load the past loans component 1`] = `
<Loader>
  <Error>
    <ResultsTable
      currentPage={1}
      fixed={false}
      headerActionClickHandler={null}
      headerActionComponent={null}
      name="loans"
      paginationComponent={null}
      renderSegment={true}
      rowActionClickHandler={[MockFunction]}
      rows={Array []}
      seeAllComponent={
        <SeeAllButton
          disabled={false}
          fluid={false}
          text="See All"
          url="/backoffice/loans?q=(item_pid:222 AND state:(ITEM_RETURNED OR CANCELLED))"
        />
      }
      showAllResults={false}
      showMaxRows={5}
      singleLine={false}
      subtitle=""
      title="Loans history"
    />
  </Error>
</Loader>
`;

exports[`ItemPastLoans tests should render pending loans 1`] = `
<ItemPastLoans
  data={
    Object {
      "hits": Array [
        Object {
          "id": 1,
          "metadata": Object {
            "document_pid": "docid-1",
            "end_date": "2018-07-28",
            "item_pid": "",
            "patron": Object {
              "email": "patron1@test.ch",
            },
            "patron_pid": "1",
            "pickup_location_pid": "locid-1",
            "pid": "loanid-1",
            "start_date": "2018-06-28",
            "state": "PENDING",
            "transaction_date": "2018-06-29",
            "transaction_location_pid": "locid-1",
            "transaction_user_pid": "user_pid",
          },
          "pid": "loan1",
        },
        Object {
          "id": 2,
          "metadata": Object {
            "document_pid": "docid-1",
            "end_date": "2018-07-28",
            "item_pid": "itemid-2",
            "patron": Object {
              "email": "patron2@test.ch",
            },
            "patron_pid": "1",
            "pickup_location_pid": "locid-1",
            "pid": "loanid-2",
            "start_date": "2018-06-28",
            "state": "PENDING",
            "transaction_date": "2018-06-29",
            "transaction_location_pid": "locid-1",
            "transaction_user_pid": "user_pid",
          },
          "pid": "loan2",
        },
      ],
      "total": 2,
    }
  }
  fetchPastLoans={[Function]}
  itemDetails={
    Object {
      "metadata": Object {
        "document_pid": 111,
        "pid": 222,
      },
      "pid": 222,
    }
  }
  showMaxPastLoans={5}
>
  <Loader>
    <Error>
      <ResultsTable
        currentPage={1}
        fixed={false}
        headerActionClickHandler={null}
        headerActionComponent={null}
        name="loans"
        paginationComponent={null}
        renderSegment={true}
        rowActionClickHandler={
          [MockFunction] {
            "calls": Array [
              Array [
                "loan1",
              ],
              Array [
                "loan2",
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        rows={
          Array [
            Object {
              "Document ID": "docid-1",
              "End date": "2018-07-28",
              "ID": "loan1",
              "Patron ID": "1",
              "Renewals": undefined,
              "Start date": "2018-06-28",
              "State": "PENDING",
            },
            Object {
              "Document ID": "docid-1",
              "End date": "2018-07-28",
              "ID": "loan2",
              "Patron ID": "1",
              "Renewals": undefined,
              "Start date": "2018-06-28",
              "State": "PENDING",
            },
          ]
        }
        seeAllComponent={
          <SeeAllButton
            disabled={false}
            fluid={false}
            text="See All"
            url="/backoffice/loans?q=(item_pid:222 AND state:(ITEM_RETURNED OR CANCELLED))"
          />
        }
        showAllResults={false}
        showMaxRows={5}
        singleLine={false}
        subtitle=""
        title="Loans history"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={16}
                    >
                      <div
                        className="middle aligned sixteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Loans history"
                          subheader=""
                        >
                          <h3
                            className="ui header"
                          >
                            Loans history
                            <HeaderSubheader
                              content=""
                            >
                              <div
                                className="sub header"
                              />
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={8}
                    >
                      <div
                        className="right aligned eight wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Table
              as="table"
              compact={true}
              selectable={true}
              striped={true}
            >
              <table
                className="ui selectable striped compact table"
              >
                <ResultsTableHeader
                  columns={
                    Array [
                      "ID",
                      "Patron ID",
                      "Document ID",
                      "State",
                      "Start date",
                      "End date",
                      "Renewals",
                    ]
                  }
                  withRowAction={false}
                >
                  <TableHeader
                    as="thead"
                  >
                    <thead
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="header"
                      >
                        <tr
                          className=""
                          data-test="header"
                        >
                          <TableHeaderCell
                            as="th"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              />
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Patron ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Patron ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Document ID"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Document ID
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="State"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                State
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Start date"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Start date
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="End date"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                End date
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                          <TableHeaderCell
                            as="th"
                            key="Renewals"
                          >
                            <TableCell
                              as="th"
                              className=""
                            >
                              <th
                                className=""
                              >
                                Renewals
                              </th>
                            </TableCell>
                          </TableHeaderCell>
                        </tr>
                      </TableRow>
                    </thead>
                  </TableHeader>
                </ResultsTableHeader>
                <ResultsTableBody
                  columns={
                    Array [
                      "ID",
                      "Patron ID",
                      "Document ID",
                      "State",
                      "Start date",
                      "End date",
                      "Renewals",
                    ]
                  }
                  rowActionClickHandler={
                    [MockFunction] {
                      "calls": Array [
                        Array [
                          "loan1",
                        ],
                        Array [
                          "loan2",
                        ],
                      ],
                      "results": Array [
                        Object {
                          "type": "return",
                          "value": undefined,
                        },
                        Object {
                          "type": "return",
                          "value": undefined,
                        },
                      ],
                    }
                  }
                  rows={
                    Array [
                      Object {
                        "Document ID": "docid-1",
                        "End date": "2018-07-28",
                        "ID": "loan1",
                        "Patron ID": "1",
                        "Renewals": undefined,
                        "Start date": "2018-06-28",
                        "State": "PENDING",
                      },
                      Object {
                        "Document ID": "docid-1",
                        "End date": "2018-07-28",
                        "ID": "loan2",
                        "Patron ID": "1",
                        "Renewals": undefined,
                        "Start date": "2018-06-28",
                        "State": "PENDING",
                      },
                    ]
                  }
                >
                  <TableBody
                    as="tbody"
                  >
                    <tbody
                      className=""
                    >
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan1"
                        key="loan1"
                      >
                        <tr
                          className=""
                          data-test="loan1"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                compact={true}
                                data-test="btn-view-details-loan1"
                                icon="info"
                              >
                                <Ref
                                  innerRef={
                                    Object {
                                      "current": <button
                                        class="ui compact icon button"
                                        data-test="btn-view-details-loan1"
                                      >
                                        <i
                                          aria-hidden="true"
                                          class="info icon"
                                        />
                                      </button>,
                                    }
                                  }
                                >
                                  <RefFindNode
                                    innerRef={
                                      Object {
                                        "current": <button
                                          class="ui compact icon button"
                                          data-test="btn-view-details-loan1"
                                        >
                                          <i
                                            aria-hidden="true"
                                            class="info icon"
                                          />
                                        </button>,
                                      }
                                    }
                                  >
                                    <button
                                      className="ui compact icon button"
                                      data-test="btn-view-details-loan1"
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="info"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="info icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </RefFindNode>
                                </Ref>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-loan1"
                            key="0-loan1"
                          >
                            <td
                              className=""
                              data-test="ID-loan1"
                            >
                              loan1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Patron ID-loan1"
                            key="1-loan1"
                          >
                            <td
                              className=""
                              data-test="Patron ID-loan1"
                            >
                              1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Document ID-loan1"
                            key="2-loan1"
                          >
                            <td
                              className=""
                              data-test="Document ID-loan1"
                            >
                              docid-1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="State-loan1"
                            key="3-loan1"
                          >
                            <td
                              className=""
                              data-test="State-loan1"
                            >
                              PENDING
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Start date-loan1"
                            key="4-loan1"
                          >
                            <td
                              className=""
                              data-test="Start date-loan1"
                            >
                              2018-06-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="End date-loan1"
                            key="5-loan1"
                          >
                            <td
                              className=""
                              data-test="End date-loan1"
                            >
                              2018-07-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Renewals-loan1"
                            key="6-loan1"
                          >
                            <td
                              className=""
                              data-test="Renewals-loan1"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                      <TableRow
                        as="tr"
                        cellAs="td"
                        data-test="loan2"
                        key="loan2"
                      >
                        <tr
                          className=""
                          data-test="loan2"
                        >
                          <TableCell
                            as="td"
                            textAlign="center"
                          >
                            <td
                              className="center aligned"
                            >
                              <Button
                                as="button"
                                compact={true}
                                data-test="btn-view-details-loan2"
                                icon="info"
                              >
                                <Ref
                                  innerRef={
                                    Object {
                                      "current": <button
                                        class="ui compact icon button"
                                        data-test="btn-view-details-loan2"
                                      >
                                        <i
                                          aria-hidden="true"
                                          class="info icon"
                                        />
                                      </button>,
                                    }
                                  }
                                >
                                  <RefFindNode
                                    innerRef={
                                      Object {
                                        "current": <button
                                          class="ui compact icon button"
                                          data-test="btn-view-details-loan2"
                                        >
                                          <i
                                            aria-hidden="true"
                                            class="info icon"
                                          />
                                        </button>,
                                      }
                                    }
                                  >
                                    <button
                                      className="ui compact icon button"
                                      data-test="btn-view-details-loan2"
                                      onClick={[Function]}
                                    >
                                      <Icon
                                        as="i"
                                        name="info"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="info icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                    </button>
                                  </RefFindNode>
                                </Ref>
                              </Button>
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="ID-loan2"
                            key="0-loan2"
                          >
                            <td
                              className=""
                              data-test="ID-loan2"
                            >
                              loan2
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Patron ID-loan2"
                            key="1-loan2"
                          >
                            <td
                              className=""
                              data-test="Patron ID-loan2"
                            >
                              1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Document ID-loan2"
                            key="2-loan2"
                          >
                            <td
                              className=""
                              data-test="Document ID-loan2"
                            >
                              docid-1
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="State-loan2"
                            key="3-loan2"
                          >
                            <td
                              className=""
                              data-test="State-loan2"
                            >
                              PENDING
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Start date-loan2"
                            key="4-loan2"
                          >
                            <td
                              className=""
                              data-test="Start date-loan2"
                            >
                              2018-06-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="End date-loan2"
                            key="5-loan2"
                          >
                            <td
                              className=""
                              data-test="End date-loan2"
                            >
                              2018-07-28
                            </td>
                          </TableCell>
                          <TableCell
                            as="td"
                            data-test="Renewals-loan2"
                            key="6-loan2"
                          >
                            <td
                              className=""
                              data-test="Renewals-loan2"
                            >
                              -
                            </td>
                          </TableCell>
                        </tr>
                      </TableRow>
                    </tbody>
                  </TableBody>
                </ResultsTableBody>
                <ResultsTableFooter
                  allRowsNumber={2}
                  columnsNumber={7}
                  currentPage={1}
                  paginationComponent={null}
                  seeAllComponent={
                    <SeeAllButton
                      disabled={false}
                      fluid={false}
                      text="See All"
                      url="/backoffice/loans?q=(item_pid:222 AND state:(ITEM_RETURNED OR CANCELLED))"
                    />
                  }
                  showAllResults={false}
                  showMaxRows={5}
                />
              </table>
            </Table>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</ItemPastLoans>
`;

exports[`ItemPastLoans tests should render show a message with no past loans 1`] = `
<ItemPastLoans
  data={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  fetchPastLoans={[Function]}
  itemDetails={
    Object {
      "metadata": Object {
        "document_pid": 111,
        "pid": 222,
      },
      "pid": 222,
    }
  }
  showMaxPastLoans={5}
>
  <Loader>
    <Error>
      <ResultsTable
        currentPage={1}
        fixed={false}
        headerActionClickHandler={null}
        headerActionComponent={null}
        name="loans"
        paginationComponent={null}
        renderSegment={true}
        rowActionClickHandler={[MockFunction]}
        rows={Array []}
        seeAllComponent={
          <SeeAllButton
            disabled={false}
            fluid={false}
            text="See All"
            url="/backoffice/loans?q=(item_pid:222 AND state:(ITEM_RETURNED OR CANCELLED))"
          />
        }
        showAllResults={false}
        showMaxRows={5}
        singleLine={false}
        subtitle=""
        title="Loans history"
      >
        <Segment>
          <div
            className="ui segment"
          >
            <Grid>
              <div
                className="ui grid"
              >
                <GridRow>
                  <div
                    className="row"
                  >
                    <GridColumn
                      verticalAlign="middle"
                      width={16}
                    >
                      <div
                        className="middle aligned sixteen wide column"
                      >
                        <Header
                          as="h3"
                          content="Loans history"
                          subheader=""
                        >
                          <h3
                            className="ui header"
                          >
                            Loans history
                            <HeaderSubheader
                              content=""
                            >
                              <div
                                className="sub header"
                              />
                            </HeaderSubheader>
                          </h3>
                        </Header>
                      </div>
                    </GridColumn>
                    <GridColumn
                      textAlign="right"
                      width={8}
                    >
                      <div
                        className="right aligned eight wide column"
                      />
                    </GridColumn>
                  </div>
                </GridRow>
              </div>
            </Grid>
            <Message
              data-test="no-results"
            >
              <div
                className="ui message"
                data-test="no-results"
              >
                There are no 
                loans
                .
              </div>
            </Message>
          </div>
        </Segment>
      </ResultsTable>
    </Error>
  </Loader>
</ItemPastLoans>
`;
